--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://muradhasanov07.github.io/TO-DO-APP",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MuradHasanov07/TO-DO-APP.git"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
